[package]
name = "math_parser"
version = "0.3.0"
edition = "2021"
description = "A parser for mathematical expressions"
license = "GPL-3.0-only"
repository = "https://github.com/muppi090909/math_parser"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
pest = "2.1.3"
pest_derive = "2.1.0"

[features]
visitor = []
